--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,7 @@ KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 SliceMap = "82cb661a-3f19-5665-9e27-df437c7e54c8"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TensorToolbox = "9c690861-8ade-587a-897e-15364bc6f718"
