--- a/Project.toml
+++ b/Project.toml
@@ -9,4 +9,5 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 SliceMap = "82cb661a-3f19-5665-9e27-df437c7e54c8"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 TensorToolbox = "9c690861-8ade-587a-897e-15364bc6f718"
