--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+jupyter
 numpy>=1.22.4,<1.24
 pandas
 pillow~=8.2.0
@@ -5,6 +6,8 @@ torch
 torchvision
 tqdm>=4.66.3
 transformers
+# SciencePlots
 scikit-learn
 scipy
 seaborn
+wandb
